Preliminary USB Mouse support
git-svn-id: svn://svn.code.sf.net/p/open2x/code/trunk@175 3edcfc3d-570e-0410-a036-8bc182068dc2

--- a/libs/SDL-1.2.9/src/main/macosx/Makefile
+++ b/libs/SDL-1.2.9/src/main/macosx/Makefile
@@ -66,13 +66,13 @@ hackhacknibdataDATA_INSTALL = $(INSTALL_DATA)
 nibdataDATA_INSTALL = $(INSTALL_DATA)
 DATA = $(hackhacknibdata_DATA) $(nibdata_DATA)
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
-ACLOCAL = ${SHELL} /home/darius/gp2x/sdl/SDL-1.2.9-GP2X/missing --run aclocal-1.9
+ACLOCAL = ${SHELL} /home/darius/gp2x/sdl/SDL-1.2.9/missing --run aclocal-1.9
 ALLOCA = 
 ALSA_CFLAGS = 
 ALSA_LIBS = 
 AMDEP_FALSE = #
 AMDEP_TRUE = 
-AMTAR = ${SHELL} /home/darius/gp2x/sdl/SDL-1.2.9-GP2X/missing --run tar
+AMTAR = ${SHELL} /home/darius/gp2x/sdl/SDL-1.2.9/missing --run tar
 AR = arm-linux-ar
 ARCH = linux
 ARTSCCONFIG = 
@@ -80,9 +80,9 @@ AS = as
 ASFLAGS = 
 AUDIO_DRIVERS =  dsp/libaudio_dsp.la dma/libaudio_dma.la
 AUDIO_SUBDIRS =  dsp dma
-AUTOCONF = ${SHELL} /home/darius/gp2x/sdl/SDL-1.2.9-GP2X/missing --run autoconf
-AUTOHEADER = ${SHELL} /home/darius/gp2x/sdl/SDL-1.2.9-GP2X/missing --run autoheader
-AUTOMAKE = ${SHELL} /home/darius/gp2x/sdl/SDL-1.2.9-GP2X/missing --run automake-1.9
+AUTOCONF = ${SHELL} /home/darius/gp2x/sdl/SDL-1.2.9/missing --run autoconf
+AUTOHEADER = ${SHELL} /home/darius/gp2x/sdl/SDL-1.2.9/missing --run autoheader
+AUTOMAKE = ${SHELL} /home/darius/gp2x/sdl/SDL-1.2.9/missing --run automake-1.9
 AWK = gawk
 CC = arm-linux-gcc
 CCAS = arm-linux-gcc
@@ -108,8 +108,8 @@ ECHO_C =
 ECHO_N = -n
 ECHO_T = 
 EGREP = grep -E
-ENABLE_SHARED_FALSE = 
-ENABLE_SHARED_TRUE = #
+ENABLE_SHARED_FALSE = #
+ENABLE_SHARED_TRUE = 
 ENABLE_STATIC_FALSE = #
 ENABLE_STATIC_TRUE = 
 ESD_CFLAGS = 
@@ -136,7 +136,7 @@ LT_AGE = 7
 LT_CURRENT = 7
 LT_RELEASE = 1.2
 LT_REVISION = 2
-MAKEINFO = ${SHELL} /home/darius/gp2x/sdl/SDL-1.2.9-GP2X/missing --run makeinfo
+MAKEINFO = ${SHELL} /home/darius/gp2x/sdl/SDL-1.2.9/missing --run makeinfo
 NASM = 
 NASMFLAGS = 
 OBJC = 
@@ -252,14 +252,14 @@ host_os = linux-gnu
 host_vendor = unknown
 includedir = ${prefix}/include
 infodir = ${prefix}/info
-install_sh = /home/darius/gp2x/sdl/SDL-1.2.9-GP2X/install-sh
+install_sh = /home/darius/gp2x/sdl/SDL-1.2.9/install-sh
 libdir = ${exec_prefix}/lib
 libexecdir = ${exec_prefix}/libexec
 localstatedir = ${prefix}/var
 mandir = ${prefix}/man
 mkdir_p = mkdir -p --
 oldincludedir = /usr/include
-prefix = /usr/local/gp2x/lib
+prefix = /usr/local/gp2x/arm-linux/
 program_transform_name = s,x,x,
 sbindir = ${exec_prefix}/sbin
 sharedstatedir = ${prefix}/com
