Updated to support USB mice and Joysticks. Added a function to turn the screen on/off, battery light on/off, and alter the CPU clock to one of 6 preset speeds (200,166,133,100,78,64). Added information about how to get HWSURFACES when using IMG_Load().
git-svn-id: svn://svn.code.sf.net/p/open2x/code/trunk@176 3edcfc3d-570e-0410-a036-8bc182068dc2

--- a/libs/SDL-1.2.9/src/main/macosx/Makefile
+++ b/libs/SDL-1.2.9/src/main/macosx/Makefile
@@ -40,8 +40,8 @@ NORMAL_UNINSTALL = :
 PRE_UNINSTALL = :
 POST_UNINSTALL = :
 build_triplet = x86_64-unknown-linux-gnu
-host_triplet = arm-unknown-linux-gnu
-target_triplet = arm-unknown-linux-gnu
+host_triplet = arm-gp2x-linux-gnu
+target_triplet = arm-gp2x-linux-gnu
 subdir = src/main/macosx
 DIST_COMMON = $(srcdir)/Info.plist.in $(srcdir)/Makefile.am \
 	$(srcdir)/Makefile.in
@@ -73,7 +73,7 @@ ALSA_LIBS =
 AMDEP_FALSE = #
 AMDEP_TRUE = 
 AMTAR = ${SHELL} /home/darius/gp2x/sdl/SDL-1.2.9/missing --run tar
-AR = arm-linux-ar
+AR = gp2x-ar
 ARCH = linux
 ARTSCCONFIG = 
 AS = as
@@ -84,17 +84,17 @@ AUTOCONF = ${SHELL} /home/darius/gp2x/sdl/SDL-1.2.9/missing --run autoconf
 AUTOHEADER = ${SHELL} /home/darius/gp2x/sdl/SDL-1.2.9/missing --run autoheader
 AUTOMAKE = ${SHELL} /home/darius/gp2x/sdl/SDL-1.2.9/missing --run automake-1.9
 AWK = gawk
-CC = arm-linux-gcc
-CCAS = arm-linux-gcc
+CC = gp2x-gcc
+CCAS = gp2x-gcc
 CCASFLAGS = 
 CCDEPMODE = depmode=gcc3
 CDROM_DRIVERS =  linux/libcdrom_linux.la
 CDROM_SUBDIRS =  linux
 CFLAGS = -g -O2 -Wall -DENABLE_DUMMYVIDEO -DUSE_DLOPEN -DOSS_SUPPORT -DENABLE_GP2XVIDEO -DUSE_INPUT_EVENTS -D_REENTRANT -DSDL_USE_PTHREADS -DHAVE_SIGACTION -DHAVE_LINUX_VERSION_H -I$(top_srcdir)/include -I$(top_srcdir)/include/SDL -I$(top_srcdir)/src -I$(top_srcdir)/src/main/linux -I$(top_srcdir)/src/audio -I$(top_srcdir)/src/video -I$(top_srcdir)/src/video/XFree86/extensions -I$(top_srcdir)/src/events -I$(top_srcdir)/src/joystick -I$(top_srcdir)/src/cdrom -I$(top_srcdir)/src/thread -I$(top_srcdir)/src/timer -I$(top_srcdir)/src/endian -I$(top_srcdir)/src/file -I$(top_builddir)/src/thread
-CPP = arm-linux-gcc -E
+CPP = gp2x-gcc -E
 CPPFLAGS = 
-CXX = arm-linux-g++
-CXXCPP = arm-linux-g++ -E
+CXX = gp2x-g++
+CXXCPP = gp2x-g++ -E
 CXXDEPMODE = depmode=gcc3
 CXXFLAGS = -g -O2 -Wall -DENABLE_DUMMYVIDEO -DUSE_DLOPEN -DOSS_SUPPORT -DENABLE_GP2XVIDEO -DUSE_INPUT_EVENTS -D_REENTRANT -DSDL_USE_PTHREADS -DHAVE_SIGACTION -DHAVE_LINUX_VERSION_H -I$(top_srcdir)/include -I$(top_srcdir)/include/SDL -I$(top_srcdir)/src -I$(top_srcdir)/src/main/linux -I$(top_srcdir)/src/audio -I$(top_srcdir)/src/video -I$(top_srcdir)/src/video/XFree86/extensions -I$(top_srcdir)/src/events -I$(top_srcdir)/src/joystick -I$(top_srcdir)/src/cdrom -I$(top_srcdir)/src/thread -I$(top_srcdir)/src/timer -I$(top_srcdir)/src/endian -I$(top_srcdir)/src/file -I$(top_builddir)/src/thread
 CYGPATH_W = echo
@@ -108,15 +108,15 @@ ECHO_C =
 ECHO_N = -n
 ECHO_T = 
 EGREP = grep -E
-ENABLE_SHARED_FALSE = #
-ENABLE_SHARED_TRUE = 
+ENABLE_SHARED_FALSE = 
+ENABLE_SHARED_TRUE = #
 ENABLE_STATIC_FALSE = #
 ENABLE_STATIC_TRUE = 
 ESD_CFLAGS = 
 ESD_CONFIG = 
 ESD_LIBS = 
 EXEEXT = 
-F77 = f95
+F77 = g77
 FFLAGS = -g -O2
 HAVE_NASM_FALSE = 
 HAVE_NASM_TRUE = #
@@ -154,7 +154,7 @@ PACKAGE_VERSION =
 PATH_SEPARATOR = :
 PKG_CONFIG = 
 PTH_CONFIG = 
-RANLIB = arm-linux-ranlib
+RANLIB = gp2x-ranlib
 SDL_BINARY_AGE = 9
 SDL_CFLAGS =  -D_REENTRANT
 SDL_EXTRADIRS =  audio video events joystick cdrom thread timer endian file cpuinfo
@@ -171,7 +171,7 @@ SET_MAKE =
 SHARED_SYSTEM_LIBS = 
 SHELL = /bin/sh
 STATIC_SYSTEM_LIBS =  -lm -ldl
-STRIP = arm-linux-strip
+STRIP = gp2x-strip
 SYSTEM_LIBS =  -lm -ldl
 TARGET_AIX_FALSE = 
 TARGET_AIX_TRUE = #
@@ -219,7 +219,7 @@ ac_ct_AS =
 ac_ct_CC = 
 ac_ct_CXX = 
 ac_ct_DLLTOOL = 
-ac_ct_F77 = f95
+ac_ct_F77 = g77
 ac_ct_OBJDUMP = 
 ac_ct_RANLIB = 
 ac_ct_STRIP = 
@@ -245,11 +245,11 @@ build_vendor = unknown
 datadir = ${prefix}/share
 esd_lib = 
 exec_prefix = ${prefix}
-host = arm-unknown-linux-gnu
-host_alias = arm-linux
+host = arm-gp2x-linux-gnu
+host_alias = gp2x
 host_cpu = arm
 host_os = linux-gnu
-host_vendor = unknown
+host_vendor = gp2x
 includedir = ${prefix}/include
 infodir = ${prefix}/info
 install_sh = /home/darius/gp2x/sdl/SDL-1.2.9/install-sh
@@ -259,16 +259,16 @@ localstatedir = ${prefix}/var
 mandir = ${prefix}/man
 mkdir_p = mkdir -p --
 oldincludedir = /usr/include
-prefix = /usr/local/gp2x/arm-linux/
+prefix = /usr/local/gp2xdev
 program_transform_name = s,x,x,
 sbindir = ${exec_prefix}/sbin
 sharedstatedir = ${prefix}/com
 sysconfdir = ${prefix}/etc
-target = arm-unknown-linux-gnu
+target = arm-gp2x-linux-gnu
 target_alias = 
 target_cpu = arm
 target_os = linux-gnu
-target_vendor = unknown
+target_vendor = gp2x
 #hackhacknibdatadir = $(nibdatadir)/SDLMain.nib
 #hackhacknibdata_DATA = info.nib
 #nibdatadir = $(datadir)/sdl
