--- a/buildroot/Config.in
+++ b/buildroot/Config.in
@@ -8,38 +8,14 @@ config BR2_HAVE_DOT_CONFIG
 
 choice
 	prompt "Target Architecture"
-	default BR2_i386
+	default BR2_gp2x
 	help
 	  Stuff
 
-config BR2_alpha
-	bool "alpha"
 config BR2_arm
 	bool "arm"
-config BR2_armeb
-	bool "armeb"
-config BR2_cris
-	bool "cris"
-config BR2_i386
-	bool "i386"
-config BR2_m68k
-	bool "m68k"
-config BR2_mips
-	bool "mips"
-config BR2_mipsel
-	bool "mipsel"
-config BR2_nios2
-	bool "nios2"
-config BR2_powerpc
-	bool "powerpc"
-config BR2_sh
-	bool "superh"
-config BR2_sh64
-	bool "superh64"
-config BR2_sparc
-	bool "sparc"
-config BR2_x86_64
-	bool "x86_64"
+config BR2_gp2x
+	bool "gp2x"
 endchoice
 
 #
@@ -50,7 +26,7 @@ endchoice
 #
 choice
 	prompt "Target Architecture Variant"
-	depends BR2_arm || BR2_armeb
+	depends BR2_arm
 	default BR2_generic_arm
 config BR2_generic_arm
 	bool "generic_arm"
@@ -81,7 +57,7 @@ config BR2_ARM_TYPE
 	default ARM610		if BR2_arm610
 	default ARM710		if BR2_arm710
 	default ARM720T		if BR2_arm720t
-	default ARM920T		if BR2_arm920t
+	default ARM920T		if BR2_arm920t || BR2_gp2x
 	default ARM922T		if BR2_arm922t
 	default ARM926T		if BR2_arm926t
 	default ARM1136JF_S 	if BR2_arm1136jf_s
@@ -100,76 +76,13 @@ config BR2_ARM_EABI
 	bool "EABI"
 endchoice
 
-choice
-	prompt "Target Architecture Variant"
-	depends BR2_sh
-	default BR2_sh4
-config BR2_sh2a_nofpueb
-	bool "sh2a_nofpueb"
-config BR2_sh2eb
-	bool "sh2eb"
-config BR2_sh3
-	bool "sh3"
-config BR2_sh3eb
-	bool "sh3eb"
-config BR2_sh4
-	bool "sh4"
-config BR2_sh4eb
-	bool "sh4eb"
-endchoice
-
-#
-# gcc builds libstdc++ differently depending on the
-# host tuplet given to it, so let people choose
-#
-choice
-	prompt "Target Architecture Variant"
-	depends BR2_i386
-	default BR2_x86_i686
-config BR2_x86_i386
-	bool "i386"
-config BR2_x86_i486
-	bool "i486"
-config BR2_x86_i586
-	bool "i586"
-config BR2_x86_i686
-	bool "i686"
-endchoice
-
 config BR2_ARCH
 	string
-	default "alpha"		if BR2_alpha
-	default "arm"		if BR2_arm
-	default "armeb"		if BR2_armeb
-	default "cris"		if BR2_cris
-	default "i386"		if BR2_x86_i386
-	default "i486"		if BR2_x86_i486
-	default "i586"		if BR2_x86_i586
-	default "i686"		if BR2_x86_i686
-	default "m68k"		if BR2_m68k
-	default "mips"		if BR2_mips
-	default "mipsel"	if BR2_mipsel
-	default "nios2"		if BR2_nios2
-	default "powerpc"	if BR2_powerpc
-	default "sh2a_nofpueb"	if BR2_sh2a_nofpueb
-	default "sh2eb"		if BR2_sh2eb
-	default "sh3"		if BR2_sh3
-	default "sh3eb"		if BR2_sh3eb
-	default "sh4"		if BR2_sh4
-	default "sh4eb"		if BR2_sh4eb
-	default "sh64"		if BR2_sh64
-	default "sparc"		if BR2_sparc
-	default "x86_64"	if BR2_x86_64
+	default "arm"		if BR2_arm || BR2_gp2x
 
 config BR2_ENDIAN
 	string
-	default "LITTLE" if BR2_arm || BR2_cris || BR2_i386 || BR2_mipsel || \
-	                    BR2_sh3 || BR2_sh4 || BR2_x86_64 || BR2_nios2 || \
-			    BR2_sh64
-	default "BIG"    if BR2_alpha || BR2_armeb || BR2_m68k || BR2_mips || \
-	                    BR2_powerpc || BR2_sh2a_nofpueb || BR2_sh2eb || \
-	                    BR2_sh3eb || BR2_sh4eb || BR2_sparc
-
+	default "LITTLE" if BR2_arm || BR2_gp2x
 menu "Build options"
 
 config BR2_WGET
