Commit patch "[1640945] Joystick module for GP2X". Thanks to Andreas Pokorny for the rather cool addition to the kernel.
http://sourceforge.net/tracker/index.php?func=detail&aid=1640945&group_id=150350&atid=777121

git-svn-id: svn://svn.code.sf.net/p/open2x/code/trunk@217 3edcfc3d-570e-0410-a036-8bc182068dc2

--- a/kernel/linux-open2x-2.4.26_FW2-3/drivers/char/joystick/Config.in
+++ b/kernel/linux-open2x-2.4.26_FW2-3/drivers/char/joystick/Config.in
@@ -27,6 +27,7 @@ if [ "$CONFIG_INPUT" != "n" ]; then
    dep_tristate '  Assasin 3D and MadCatz Panther devices' CONFIG_INPUT_A3D $CONFIG_INPUT $CONFIG_INPUT_GAMEPORT
    dep_tristate '  Logitech ADI digital joysticks and gamepads' CONFIG_INPUT_ADI $CONFIG_INPUT $CONFIG_INPUT_GAMEPORT
    dep_tristate '  Creative Labs Blaster Cobra gamepad' CONFIG_INPUT_COBRA $CONFIG_INPUT $CONFIG_INPUT_GAMEPORT
+   dep_tristate '  Gamepark Holding GP2X-F100 gamepad' CONFIG_INPUT_GP2X $CONFIG_ARCH_MMSP2 $CONFIG_INPUT 
    dep_tristate '  Genius Flight2000 Digital joysticks and gamepads' CONFIG_INPUT_GF2K $CONFIG_INPUT $CONFIG_INPUT_GAMEPORT
    dep_tristate '  Gravis GrIP joysticks and gamepads' CONFIG_INPUT_GRIP $CONFIG_INPUT $CONFIG_INPUT_GAMEPORT
    dep_tristate '  InterAct digital joysticks and gamepads' CONFIG_INPUT_INTERACT $CONFIG_INPUT $CONFIG_INPUT_GAMEPORT
