--- a/buildroot/package/Config.in
+++ b/buildroot/package/Config.in
@@ -5,7 +5,7 @@ comment "The default minimal system"
 source "package/busybox/Config.in"
 
 
-comment "The minimum needed to build a uClibc development system"
+comment "The minimum needed to build a GP2X firmware"
 source "package/bash/Config.in"
 source "package/bzip2/Config.in"
 source "package/coreutils/Config.in"
@@ -15,6 +15,7 @@ source "package/grep/Config.in"
 source "package/patch/Config.in"
 source "package/sed/Config.in"
 source "package/tar/Config.in"
+source "package/glibc/Config.in"
 
 
 comment "Other stuff"
@@ -33,6 +34,7 @@ source "package/e2fsprogs/Config.in"
 source "package/fontconfig/Config.in"
 source "package/freetype/Config.in"
 source "package/gettext/Config.in"
+source "package/gmenu2x/Config.in"
 source "package/gmp/Config.in"
 source "package/mpfr/Config.in"
 source "package/gzip/Config.in"
@@ -60,12 +62,14 @@ source "package/ncurses/Config.in"
 source "package/netplug/Config.in"
 source "package/openssl/Config.in"
 source "package/pango/Config.in"
+source "package/pkgconfig/Config.in"
 source "package/qte/Config.in"
 source "package/qtopia4/Config.in"
 source "package/readline/Config.in"
 source "package/samba/Config.in"
 source "package/sdl/Config.in"
 source "package/sdl-image/Config.in"
+source "package/sdl-gfx/Config.in"
 source "package/sqlite/Config.in"
 source "package/tiff/Config.in"
 source "package/tinylogin/Config.in"
