--- a/kernel/linux-open2x-2.4.26_FW2-3/drivers/video/Config.in
+++ b/kernel/linux-open2x-2.4.26_FW2-3/drivers/video/Config.in
@@ -51,6 +51,9 @@ if [ "$CONFIG_FB" = "y" ]; then
      if [ "$CONFIG_FB_SA1100" = "y" -a "$CONFIG_SA1100_CERF_CPLD" = "y" ]; then
        bool 'Cerfboard Backlight (CerfPDA)' CONFIG_SA1100_CERF_LCD_BACKLIGHT
      fi
+     if [ "$CONFIG_ARCH_MMSP2" = "y" ]; then
+              bool '  Open2x Linux Boot Progress Patch' CONFIG_LPP
+     fi
    fi
    dep_tristate '  CyberPro 2000/2010/5000 support' CONFIG_FB_CYBER2000 $CONFIG_PCI
    if [ "$CONFIG_APOLLO" = "y" ]; then
@@ -108,6 +111,9 @@ if [ "$CONFIG_FB" = "y" ]; then
    fi
    if [ "$CONFIG_X86" = "y" ]; then
       bool '  VESA VGA graphics console' CONFIG_FB_VESA
+      if [ "$CONFIG_EXPERIMENTAL" = "y" ]; then
+         bool '  Enable Linux Progress Patch (EXPERIMENTAL)' CONFIG_LPP
+      fi
       tristate '  VGA 16-color graphics console' CONFIG_FB_VGA16
       tristate '  Hercules mono graphics console (EXPERIMENTAL)' CONFIG_FB_HGA
       define_bool CONFIG_VIDEO_SELECT y
