Further work on kernel bootlogo progress bar patch.
Main fix is to restore normal Linux fblogo features rather then the odd custom GPH stuff and add are default boot logo. Also enable in default .config now.

git-svn-id: svn://svn.code.sf.net/p/open2x/code/trunk@235 3edcfc3d-570e-0410-a036-8bc182068dc2

--- a/kernel/linux-open2x-2.4.26_FW2-3/.config
+++ b/kernel/linux-open2x-2.4.26_FW2-3/.config
@@ -849,6 +849,7 @@ CONFIG_FB_MMSP2=y
 # CONFIG_FB_CLPS711X is not set
 # CONFIG_FB_SA1100 is not set
 # CONFIG_FB_DBMX1 is not set
+CONFIG_LPP=y
 # CONFIG_FB_CYBER2000 is not set
 # CONFIG_FB_VIRTUAL is not set
 CONFIG_FBCON_ADVANCED=y
