Update makefile.o2x (The one used by the ./open2x-libs.sh) to build SDL 1.2.11 by default. If people are building from SVN and not the lib packs then they must want bleeding edge anyway ;).
git-svn-id: svn://svn.code.sf.net/p/open2x/code/trunk@245 3edcfc3d-570e-0410-a036-8bc182068dc2

--- a/libs/makefile.o2x
+++ b/libs/makefile.o2x
@@ -1,145 +1,178 @@
- ## OPEN2X SETTINGS
- ## Customise the makefile vairables below to configure the script for your tool-chain.
+## OPEN2X SETTINGS
+## Customise the makefile vairables below to configure the script for your tool-chain.
 
- ## Tool settings - Do not change these but use the HOST vars in open2x-libs.sh.
+## Tool settings - Do not change these but use the HOST vars in open2x-libs.sh.
+
+BUILD=$(shell uname -m)
+
+FLAGS += CC='$(OPEN2X)/bin/$(HOST)-gcc'
+FLAGS += CXX='$(OPEN2X)/bin/$(HOST)-g++'
+FLAGS += AR='$(OPEN2X)/bin/$(HOST)-ar'
+FLAGS += STRIP='$(OPEN2X)/bin/$(HOST)-strip'
+FLAGS += RANLIB='$(OPEN2X)/bin/$(HOST)-ranlib'
+FLAGS += OPEN2X='$(PREFIX)'
+
+FLAGS += CFLAGS='-O3 -ffast-math -fomit-frame-pointer -mcpu=arm920t -I$(OPEN2X)/include -I$(OPEN2X)/include/libxml2 -I$(OPEN2X)/include/SDL'
+FLAGS += LDFLAGS='-L$(OPEN2X)/lib'
+#FLAGS += BUILD_CC='/usr/bin/cc'
+FLAGS += PKG_CONFIG='$(OPEN2X)/bin/pkg-config'
+
+#Start by building SDL as so much depends on it.
+TARGETS += $(PREFIX)/lib/libSDL.a
+
+#Build everything else.
+TARGETS += $(PREFIX)/lib/libz.a
+TARGETS += $(PREFIX)/lib/libpng.a
+TARGETS += $(PREFIX)/lib/libSDL_gfx.a
+TARGETS += $(PREFIX)/lib/libxml2.a
+TARGETS += $(PREFIX)/lib/libSDL_image.a
+#TARGETS += $(PREFIX)/lib/libSDL_svg.a
+#TARGETS += $(PREFIX)/lib/libSDL_ttf.a
+TARGETS += $(PREFIX)/lib/libbz2.a
+TARGETS += $(PREFIX)/lib/libfreetype.a
+TARGETS += $(PREFIX)/lib/libid3tag.a
+TARGETS += $(PREFIX)/lib/libjpeg.a
+TARGETS += $(PREFIX)/lib/libmad.a
+TARGETS += $(PREFIX)/lib/libmikmod.a
+TARGETS += $(PREFIX)/lib/libncurses.a
+TARGETS += $(PREFIX)/lib/libogg.a
+TARGETS += $(PREFIX)/lib/libreadline.a
+TARGETS += $(PREFIX)/lib/libsmpeg.a
+TARGETS += $(PREFIX)/lib/libtiff.a
+TARGETS += $(PREFIX)/lib/libungif.a
+TARGETS += $(PREFIX)/lib/libvorbisidec.a
+TARGETS += $(PREFIX)/lib/libSDL_mixer.a
+TARGETS += $(PREFIX)/lib/libImlib2.a
+#TARGETS += $(PREFIX)/lib/libvorbis.a
  
- BUILD=$(shell uname -m)
- 
- FLAGS += CC='$(OPEN2X)/bin/$(HOST)-gcc'
- FLAGS += CXX='$(OPEN2X)/bin/$(HOST)-g++'
- FLAGS += AR='$(OPEN2X)/bin/$(HOST)-ar' 
- FLAGS += STRIP='$(OPEN2X)/bin/$(HOST)-strip' 
- FLAGS += RANLIB='$(OPEN2X)/bin/$(HOST)-ranlib' 
- FLAGS += OPEN2X='$(PREFIX)'
- 
- FLAGS += CFLAGS='-O3 -ffast-math -fomit-frame-pointer -mcpu=arm920t -I$(OPEN2X)/include -I$(OPEN2X)/include/libxml2 -I$(OPEN2X)/include/SDL'
- FLAGS += LDFLAGS='-L$(OPEN2X)/lib'
- FLAGS += BUILD_CC='/usr/bin/cc'
- FLAGS += PKG_CONFIG='$(OPEN2X)/bin/pkg-config'
+all: $(TARGETS)
 
- TARGETS += $(PREFIX)/lib/libxml2.a
- TARGETS += $(PREFIX)/lib/libSDL.a
- TARGETS += $(PREFIX)/lib/libSDL_gfx.a
- TARGETS += $(PREFIX)/lib/libz.a
- TARGETS += $(PREFIX)/lib/libpng.a
- TARGETS += $(PREFIX)/lib/libSDL_image.a
- TARGETS += $(PREFIX)/lib/libSDL_svg.a
- TARGETS += $(PREFIX)/lib/libSDL_ttf.a
- TARGETS += $(PREFIX)/lib/libbz2.a
- TARGETS += $(PREFIX)/lib/libfreetype.a
- TARGETS += $(PREFIX)/lib/libid3tag.a
- TARGETS += $(PREFIX)/lib/libjpeg.a
- TARGETS += $(PREFIX)/lib/libmad.a
- TARGETS += $(PREFIX)/lib/libmikmod.a
- TARGETS += $(PREFIX)/lib/libncurses.a
- TARGETS += $(PREFIX)/lib/libogg.a
- TARGETS += $(PREFIX)/lib/libreadline.a
- TARGETS += $(PREFIX)/lib/libsmpeg.a
- TARGETS += $(PREFIX)/lib/libtiff.a
- TARGETS += $(PREFIX)/lib/libungif.a
- # TARGETS += $(PREFIX)/lib/libvorbis.a
- TARGETS += $(PREFIX)/lib/libvorbisidec.a
- TARGETS += $(PREFIX)/lib/libSDL_mixer.a
- TARGETS += $(PREFIX)/lib/libImlib2.a
-
- all: $(TARGETS)
-
- clean:
+clean:
 	rm -f $(TARGETS)
 
- SDL: $(PREFIX)/lib/libSDL.a
- $(PREFIX)/lib/libSDL.a:
-	cd SDL-1.2.9 && ./autogen.sh && $(FLAGS) ./configure --prefix=$(PREFIX) --build=$(BUILD) --host=$(HOST) --enable-shared --enable-static --enable-pthreads --enable-pthreads-sem --enable-threads && $(FLAGS) make && $(FLAGS) make install && $(FLAGS) make clean
+#SDL: $(PREFIX)/lib/libSDL.a
+#$(PREFIX)/lib/libSDL.a:
+#	cd SDL-1.2.9 && ./autogen.sh && $(FLAGS) ./configure --prefix=$(PREFIX) --build=$(BUILD) --host=$(HOST) --enable-shared --enable-static --enable-pthreads --enable-pthreads-sem --enable-threads && $(FLAGS) make && $(FLAGS) make install && $(FLAGS) make clean
 
- SDL_gfx: $(PREFIX)/lib/libSDL_gfx.a
- $(PREFIX)/lib/libSDL_gfx.a: $(PREFIX)/lib/libSDL.a
+#Swap this with the rule above to build the test SDL 1.2.11
+
+SDL: $(PREFIX)/lib/libSDL.a
+
+$(PREFIX)/lib/libSDL.a:
+	cd SDL-1.2.11 && ./autogen.sh && $(FLAGS) ./configure --prefix=$(PREFIX) --build=$(BUILD) --host=$(HOST) --enable-shared --enable-static --enable-pthreads --enable-pthreads-sem --enable-threads --enable-video --enable-video-gp2x --enable-video-fbcon=no && $(FLAGS) make && $(FLAGS) make install && $(FLAGS) make clean
+
+SDL_gfx: $(PREFIX)/lib/libSDL_gfx.a
+
+$(PREFIX)/lib/libSDL_gfx.a: $(PREFIX)/lib/libSDL.a
 	cd SDL_gfx-2.0.13 && $(FLAGS) ./configure --prefix=$(PREFIX) --build=$(BUILD) --host=$(HOST) --enable-shared --enable-static --with-sdl-prefix=$(PREFIX) --disable-mmx && $(FLAGS) make && $(FLAGS) make install && $(FLAGS) make clean
 
- SDL_image: $(PREFIX)/lib/libSDL_image.a
- $(PREFIX)/lib/libSDL_image.a: $(PREFIX)/lib/libSDL.a $(PREFIX)/lib/libjpeg.a $(PREFIX)/lib/libpng.a
+SDL_image: $(PREFIX)/lib/libSDL_image.a
+
+$(PREFIX)/lib/libSDL_image.a: $(PREFIX)/lib/libSDL.a $(PREFIX)/lib/libjpeg.a $(PREFIX)/lib/libpng.a
 	cd SDL_image-1.2.4 && $(FLAGS) ./configure --prefix=$(PREFIX) --build=$(BUILD) --host=$(HOST) --enable-shared --enable-static --with-sdl-prefix=$(PREFIX) && $(FLAGS) make && $(FLAGS) make install && $(FLAGS) make clean
 
- SDL_ttf: $(PREFIX)/lib/libSDL_ttf.a
- $(PREFIX)/lib/libSDL_ttf.a: $(PREFIX)/lib/libSDL.a $(PREFIX)/lib/libfreetype.a
+SDL_ttf: $(PREFIX)/lib/libSDL_ttf.a
+
+$(PREFIX)/lib/libSDL_ttf.a: $(PREFIX)/lib/libSDL.a $(PREFIX)/lib/libfreetype.a
 	cd SDL_ttf-2.0.7 && $(FLAGS) ./configure --prefix=$(PREFIX) --build=$(BUILD) --host=$(HOST) --enable-shared --enable-static --with-freetype-prefix=$(PREFIX) --with-sdl-prefix=$(PREFIX) --without-x && $(FLAGS) make && $(FLAGS) make install && $(FLAGS) make clean
 
-  bzip2: $(PREFIX)/lib/libbz2.a
- $(PREFIX)/lib/libbz2.a:
-	cd bzip2-1.0.4 && $(FLAGS) make && $(FLAGS) make install && $(FLAGS) make clean
- 
- freetype: $(PREFIX)/lib/libfreetype.a
- $(PREFIX)/lib/libfreetype.a:
-	cd freetype-2.1.10 && GNUMAKE=make $(FLAGS) ./configure --prefix=$(PREFIX) --build=$(BUILD) --host=$(HOST) --enable-shared --enable-static && $(FLAGS) make && $(FLAGS) make install && $(FLAGS) make clean
+SDL_svg: $(PREFIX)/lib/libSDL_svg.a
 
- imlib2: $(PREFIX)/lib/libImlib2.a
- $(PREFIX)/lib/libImlib2.a: $(PREFIX)/lib/libjpeg.a $(PREFIX)/lib/libpng.a $(PREFIX)/lib/libtiff.a $(PREFIX)/lib/libungif.a $(PREFIX)/lib/libz.a $(PREFIX)/lib/libbz2.a $(PREFIX)/lib/libid3tag.a $(PREFIX)/lib/libfreetype.a
-	cd imlib2-1.2.2 && $(FLAGS) ./configure --prefix=$(PREFIX) --build=$(BUILD) --host=$(HOST) --disable-shared --enable-static --with-freetype-config=$(PREFIX)/bin/freetype-config --without-x && $(FLAGS) make && $(FLAGS) make install && $(FLAGS) make clean
-
- libid3tag: $(PREFIX)/lib/libid3tag.a
- $(PREFIX)/lib/libid3tag.a:
-	cd libid3tag-0.15.1b && $(FLAGS) ./configure --prefix=$(PREFIX) --build=$(BUILD) --host=$(HOST) --enable-shared --enable-static && $(FLAGS) make && $(FLAGS) make install && $(FLAGS) make clean
-
- libjpeg: $(PREFIX)/lib/libjpeg.a
- $(PREFIX)/lib/libjpeg.a:
-	cd libjpeg-0.6b && $(FLAGS) ./configure --prefix=$(PREFIX) --build=$(BUILD) --host=$(HOST) --enable-shared --enable-static && $(FLAGS) make && $(FLAGS) make install-lib && $(FLAGS) make install-headers && $(FLAGS) make clean
-
- libmad: $(PREFIX)/lib/libmad.a
- $(PREFIX)/lib/libmad.a:
-	cd libmad-0.15.1b && $(FLAGS) ./configure --prefix=$(PREFIX) --build=$(BUILD) --host=$(HOST) --enable-shared --enable-static --enable-speed && $(FLAGS) make && $(FLAGS) make install && $(FLAGS) make clean
-
- libmikmod: $(PREFIX)/lib/libmikmod.a
- $(PREFIX)/lib/libmikmod.a:
-	cd libmikmod-3.1.11 && $(FLAGS) ./configure --prefix=$(PREFIX) --build=$(BUILD) --host=$(HOST) --enable-shared --enable-static --disable-esd && $(FLAGS) make && $(FLAGS) make install && $(FLAGS) make clean
-
- libogg: $(PREFIX)/lib/libogg.a
- $(PREFIX)/lib/libogg.a:
-	cd libogg-1.1.3 && $(FLAGS) ./configure --prefix=$(PREFIX) --build=$(BUILD) --host=$(HOST) --enable-shared --enable-static && $(FLAGS) make && $(FLAGS) make install && $(FLAGS) make clean
-
- libpng: $(PREFIX)/lib/libpng.a
- $(PREFIX)/lib/libpng.a: $(PREFIX)/lib/libz.a
-	cd libpng-1.2.15 && $(FLAGS) ./configure --prefix=$(PREFIX) --build=$(BUILD) --host=$(HOST) --enable-shared --enable-static && $(FLAGS) make && $(FLAGS) make install && $(FLAGS) make clean
-
- libtiff: $(PREFIX)/lib/libtiff.a
- $(PREFIX)/lib/libtiff.a:
-	cd libtiff-3.8.2 && $(FLAGS) ./configure --prefix=$(PREFIX) --build=$(BUILD) --host=$(HOST) --enable-shared --enable-static && $(FLAGS) make && $(FLAGS) make install && $(FLAGS) make clean
-
- libungif: $(PREFIX)/lib/libungif.a
- $(PREFIX)/lib/libungif.a:
-	cd libungif-4.1.4 && $(FLAGS) ./configure --prefix=$(PREFIX) --build=$(BUILD) --host=$(HOST) --enable-shared --enable-static && $(FLAGS) make && $(FLAGS) make install && $(FLAGS) make clean
-
- libvorbis: $(PREFIX)/lib/libvorbis.a
- $(PREFIX)/lib/libvorbis.a: $(PREFIX)/lib/libogg.a
- 	cd libvorbis-1.1.2 && $(FLAGS) ./configure --prefix=$(PREFIX) --build=$(BUILD) --host=$(HOST) --enable-shared --enable-static --with-ogg=$(PREFIX) && $(FLAGS) make && $(FLAGS) make install && $(FLAGS) make clean
-
- libxml2: $(PREFIX)/lib/libxml2.a
- $(PREFIX)/lib/libxml2.a:
-	cd libxml2-2.6.29 && $(FLAGS) ./configure --prefix=$(PREFIX) --build=$(BUILD) --host=$(HOST) --enable-shared --enable-static && $(FLAGS) make && $(FLAGS) make install && $(FLAGS) make clean
-
- SDL_svg: $(PREFIX)/lib/libSDL_svg.a
- $(PREFIX)/lib/libSDL_svg.a: $(PREFIX)/lib/libSDL.a $(PREFIX)/lib/libxml2.a $(PREFIX)/lib/libz.a
+$(PREFIX)/lib/libSDL_svg.a: $(PREFIX)/lib/libSDL.a $(PREFIX)/lib/libxml2.a $(PREFIX)/lib/libz.a
 	cd SDL_svg-1.1.9 && ./autogen.sh $(FLAGS) $(LIBS) && $(FLAGS) $(LIBS) ./configure --prefix=$(PREFIX) --build=$(BUILD) --host=$(HOST) --enable-shared --enable-static --with-sdl-prefix=$(PREFIX) --with-gnu-ld && $(FLAGS) make && $(FLAGS) make install && $(FLAGS) make clean
 
- ncurses: $(PREFIX)/lib/libncurses.a
- $(PREFIX)/lib/libncurses.a:
+bzip2: $(PREFIX)/lib/libbz2.a
+
+$(PREFIX)/lib/libbz2.a:
+	cd bzip2-1.0.4 && $(FLAGS) make && $(FLAGS) make install && $(FLAGS) make clean
+
+freetype: $(PREFIX)/lib/libfreetype.a
+
+$(PREFIX)/lib/libfreetype.a:
+	cd freetype-2.1.10 && GNUMAKE=make $(FLAGS) ./configure --prefix=$(PREFIX) --build=$(BUILD) --host=$(HOST) --enable-shared --enable-static && $(FLAGS) make && $(FLAGS) make install && $(FLAGS) make clean
+
+imlib2: $(PREFIX)/lib/libImlib2.a
+
+$(PREFIX)/lib/libImlib2.a: $(PREFIX)/lib/libjpeg.a $(PREFIX)/lib/libpng.a $(PREFIX)/lib/libtiff.a $(PREFIX)/lib/libungif.a $(PREFIX)/lib/libz.a $(PREFIX)/lib/libbz2.a $(PREFIX)/lib/libid3tag.a $(PREFIX)/lib/libfreetype.a
+	cd imlib2-1.2.2 && $(FLAGS) ./configure --prefix=$(PREFIX) --build=$(BUILD) --host=$(HOST) --disable-shared --enable-static --with-freetype-config=$(PREFIX)/bin/freetype-config --without-x && $(FLAGS) make && $(FLAGS) make install && $(FLAGS) make clean
+
+libid3tag: $(PREFIX)/lib/libid3tag.a
+
+$(PREFIX)/lib/libid3tag.a:
+	cd libid3tag-0.15.1b && $(FLAGS) ./configure --prefix=$(PREFIX) --build=$(BUILD) --host=$(HOST) --enable-shared --enable-static && $(FLAGS) make && $(FLAGS) make install && $(FLAGS) make clean
+
+libjpeg: $(PREFIX)/lib/libjpeg.a
+
+$(PREFIX)/lib/libjpeg.a:
+	cd libjpeg-0.6b && $(FLAGS) ./configure --prefix=$(PREFIX) --build=$(BUILD) --host=$(HOST) --enable-shared --enable-static && $(FLAGS) make && $(FLAGS) make install-lib && $(FLAGS) make install-headers && $(FLAGS) make clean
+
+libmad: $(PREFIX)/lib/libmad.a
+
+$(PREFIX)/lib/libmad.a:
+	cd libmad-0.15.1b && $(FLAGS) ./configure --prefix=$(PREFIX) --build=$(BUILD) --host=$(HOST) --enable-shared --enable-static --enable-speed && $(FLAGS) make && $(FLAGS) make install && $(FLAGS) make clean
+
+libmikmod: $(PREFIX)/lib/libmikmod.a
+
+$(PREFIX)/lib/libmikmod.a:
+	cd libmikmod-3.1.11 && $(FLAGS) ./configure --prefix=$(PREFIX) --build=$(BUILD) --host=$(HOST) --enable-shared --enable-static --disable-esd && $(FLAGS) make && $(FLAGS) make install && $(FLAGS) make clean
+
+libogg: $(PREFIX)/lib/libogg.a
+
+$(PREFIX)/lib/libogg.a:
+	cd libogg-1.1.3 && $(FLAGS) ./configure --prefix=$(PREFIX) --build=$(BUILD) --host=$(HOST) --enable-shared --enable-static && $(FLAGS) make && $(FLAGS) make install && $(FLAGS) make clean
+
+libpng: $(PREFIX)/lib/libpng.a
+
+$(PREFIX)/lib/libpng.a: $(PREFIX)/lib/libz.a
+	cd libpng-1.2.15 && $(FLAGS) ./configure --prefix=$(PREFIX) --build=$(BUILD) --host=$(HOST) --enable-shared --enable-static && $(FLAGS) make && $(FLAGS) make install && $(FLAGS) make clean
+
+libtiff: $(PREFIX)/lib/libtiff.a
+
+$(PREFIX)/lib/libtiff.a:
+	cd libtiff-3.8.2 && $(FLAGS) ./configure --prefix=$(PREFIX) --build=$(BUILD) --host=$(HOST) --enable-shared --enable-static && $(FLAGS) make && $(FLAGS) make install && $(FLAGS) make clean
+
+libungif: $(PREFIX)/lib/libungif.a
+
+$(PREFIX)/lib/libungif.a:
+	cd libungif-4.1.4 && $(FLAGS) ./configure --prefix=$(PREFIX) --build=$(BUILD) --host=$(HOST) --enable-shared --enable-static && $(FLAGS) make && $(FLAGS) make install && $(FLAGS) make clean
+
+libvorbis: $(PREFIX)/lib/libvorbis.a
+
+$(PREFIX)/lib/libvorbis.a: $(PREFIX)/lib/libogg.a
+	cd libvorbis-1.1.2 && $(FLAGS) ./configure --prefix=$(PREFIX) --build=$(BUILD) --host=$(HOST) --enable-shared --enable-static --with-ogg=$(PREFIX) && $(FLAGS) make && $(FLAGS) make install && $(FLAGS) make clean
+
+libxml2: $(PREFIX)/lib/libxml2.a
+
+$(PREFIX)/lib/libxml2.a:
+	cd libxml2-2.6.29 && $(FLAGS) ./configure --prefix=$(PREFIX) --build=$(BUILD) --host=$(HOST) --enable-shared --enable-static && $(FLAGS) make && $(FLAGS) make install && $(FLAGS) make clean
+
+ncurses: $(PREFIX)/lib/libncurses.a
+
+$(PREFIX)/lib/libncurses.a:
 	cd ncurses-5.5 && $(FLAGS) ./configure --prefix=$(PREFIX) --build=$(BUILD) --host=$(HOST) --enable-shared --enable-static && $(FLAGS) make && $(FLAGS) make install && $(FLAGS) make clean
 
- readline: $(PREFIX)/lib/libreadline.a
- $(PREFIX)/lib/libreadline.a:
+readline: $(PREFIX)/lib/libreadline.a
+
+$(PREFIX)/lib/libreadline.a:
 	cd readline-5.1 && $(FLAGS) ./configure --prefix=$(PREFIX) --build=$(BUILD) --host=$(HOST) --enable-shared --enable-static && $(FLAGS) make && $(FLAGS) make install && $(FLAGS) make clean
 
- smpeg: $(PREFIX)/lib/libsmpeg.a
- $(PREFIX)/lib/libsmpeg.a:
+smpeg: $(PREFIX)/lib/libsmpeg.a
+
+$(PREFIX)/lib/libsmpeg.a: $(PREFIX)/lib/libSDL.a
 	cd smpeg-cvs && $(FLAGS) $(LIBS) ./configure --prefix=$(PREFIX) --build=$(BUILD) --host=$(HOST) --disable-gtk-player --disable-opengl-player --enable-shared --enable-static --with-sdl-prefix=$(PREFIX) --without-x && $(FLAGS) make && $(FLAGS) make install && $(FLAGS) make clean
 
- tremor: $(PREFIX)/lib/libvorbisidec.a
- $(PREFIX)/lib/libvorbisidec.a:
+tremor: $(PREFIX)/lib/libvorbisidec.a
+
+$(PREFIX)/lib/libvorbisidec.a:
 	cd tremor-0.0.0 && ./autogen.sh && $(FLAGS) ./configure --prefix=$(PREFIX) --build=$(BUILD) --host=$(HOST) --enable-shared --enable-static --enable-low-accuracy && $(FLAGS) make && $(FLAGS) make install && $(FLAGS) make clean
 
- zlib: $(PREFIX)/lib/libz.a
- $(PREFIX)/lib/libz.a:
+zlib: $(PREFIX)/lib/libz.a
+
+$(PREFIX)/lib/libz.a:
 	cd zlib-1.2.3 && $(FLAGS) ./configure --prefix=$(PREFIX) && $(FLAGS) && AR='$(OPEN2X)/bin/$(HOST)-ar cru' && make && $(FLAGS) make install && $(FLAGS) make clean
 	cd zlib-1.2.3 && $(FLAGS) ./configure --prefix=$(PREFIX) --shared && $(FLAGS) && AR='$(OPEN2X)/bin/$(HOST)-ar cru' && make && $(FLAGS) make install && $(FLAGS) make clean
 
- SDL_mixer: $(PREFIX)/lib/libSDL_mixer.a
- $(PREFIX)/lib/libSDL_mixer.a: $(PREFIX)/lib/libSDL.a $(PREFIX)/lib/libsmpeg.a $(PREFIX)/lib/libvorbisidec.a
-	cd SDL_mixer-1.2.6 && $(FLAGS) ./configure --prefix=$(PREFIX) --build=$(BUILD) --host=$(HOST) --enable-shared --enable-static --with-sdl-prefix=$(PREFIX) --enable-music-mp3=yes --enable-music-libmikmod=no && $(FLAGS) make && $(FLAGS) make install && $(FLAGS) make clean
+SDL_mixer: $(PREFIX)/lib/libSDL_mixer.a
+
+$(PREFIX)/lib/libSDL_mixer.a: $(PREFIX)/lib/libSDL.a $(PREFIX)/lib/libsmpeg.a $(PREFIX)/lib/libvorbisidec.a $(PREFIX)/lib/libmikmod.a $(PREFIX)/lib/libmad.a
+	cd SDL_mixer-1.2.7 && $(FLAGS) ./configure --prefix=$(PREFIX) --build=$(BUILD) --host=$(HOST) --enable-shared --enable-static --with-sdl-prefix=$(PREFIX) --enable-music-mp3=yes --enable-music-libmikmod=no --enable-music-ogg-tremor=yes && $(FLAGS) make && $(FLAGS) make install && $(FLAGS) make clean
