Commit patch [1745888] from Matt Ownby (Thanks Matt). This patch adds support for hardware accelerated YUV2 on the GP2X. Also clean up configure.in and a few other files a little.
git-svn-id: svn://svn.code.sf.net/p/open2x/code/trunk@247 3edcfc3d-570e-0410-a036-8bc182068dc2

--- a/libs/SDL-1.2.11/configure.in
+++ b/libs/SDL-1.2.11/configure.in
@@ -1109,8 +1109,8 @@ AC_HELP_STRING([--enable-video-gp2x], [use gp2x video driver [[default=yes]]]),
 	AC_MSG_CHECKING(for GP2X support)
 	video_gp2x=yes
 	AC_DEFINE(SDL_VIDEO_DRIVER_GP2X)
+	SOURCES="$SOURCES $srcdir/src/video/ARM_blit1to2.S"
 	SOURCES="$SOURCES $srcdir/src/video/gp2x/*.c"
-	SOURCES="$SOURCES $srcdir/src/video/*.s"
 	have_video=yes
     fi
 }
